# fetch-app/controllers/storage_private.go
@@ -18,6 +18,7 @@ func (c *StoragePrivateController) Prepare() {
 // @Summary Get All Storages
 // @Param limit query int false "limit of this request"
 // @Param page query int false "page of this request"
+// @Param authorization header string true "bearer token in jwt"
 // @Success 200
 // @Failure 403
 // @router / [get]
